# tinyRPC

./: CMakeLists.txt  README.md  autobuild.sh
example/: CMakeLists.txt  ThreadPoolTesting.cc  calleeFriends.cc  calleeUser.cc  callerFriends.cc  callerUser.cc  loadConfig.cc
example/golang/: go.mod  main.go
example/golang/User/: RPC.go  User.pb.go  go.mod  rpcHeader.pb.go
example/proto/: Friends.pb.cc  Friends.pb.h  Friends.proto  User.pb.cc  User.pb.h  User.proto
include/: Application.h  Provider.h  ThreadPool.h  tinyRpcChannel.h  tinyRpcConfig.h  tinyRpcController.h  tinyRpcZookeeperCli.h
src/: Application.cc  Provider.cc  ThreadPool.cc  rpcHeader.pb.cc  tinyRpcChannel.cc  tinyRpcConfig.cc  tinyRpcController.cc  tinyRpcZookeeperCli.cc
tinyWebLib/include/: Thread.h
utils/: rpcHeader.pb.h  rpcHeader.proto
